--- a/ingresar/css/skilline.css
+++ b/ingresar/css/skilline.css
@@ -9,6 +9,37 @@
   --color5: #d9ddcd;
   
 }
+
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+ }
+ 
+td {
+
+     padding: 30px;
+     border: 2px solid rgb(100, 110, 110);
+     background-color: #ef9898;
+     background-image: -webkit-gradient(linear, left top, right bottom, color-stop(49%, rgb(255, 29, 29)), color-stop(50%, black), color-stop(51%, rgba(231, 220, 220, 0)));
+     background-image: -webkit-linear-gradient(top left, rgba(255, 255, 255, 0) 49%, black 50%, rgba(255, 255, 255, 0) 51%);
+     background-image: -o-linear-gradient(top left, rgb(255, 255, 255) 49%, black 50%, rgb(255, 255, 255) 51%);
+     background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 49%, rgb(84, 90, 90) 50%, rgb(255, 255, 255) 51%);
+ }
+ 
+ td .c1 {
+    background-color: #ef9898;
+     -webkit-transform: translate(-20px,-20px);
+         -ms-transform: translate(-20px,-20px);
+             transform: translate(-20px,-20px);
+ }
+ 
+ td .c2 {
+     -webkit-transform: translate(20px,20px);
+         -ms-transform: translate(20px,20px);
+             transform: translate(20px,20px);
+ }
+
 .bg-cream {
     background-color: var(--color5);
 }
