--- a/css/skilline.css
+++ b/css/skilline.css
@@ -10,6 +10,13 @@
   
 }
 
+::selection {
+    background: var(--color1);
+    color: black;
+    text-shadow: 1px 1px #fff;
+}
+
+
 .btn{
     background-color: var(--color1);
 }
