--- a/ingresar/css/vertical-layout-light/style.css
+++ b/ingresar/css/vertical-layout-light/style.css
@@ -19776,7 +19776,7 @@ code {
 /* POPUP */
 /* ------------------------- */
 
-.overlay {
+#overlay {
 	background: rgba(0,0,0,.3);
 	position: fixed;
 	top: 0;
@@ -19789,7 +19789,7 @@ code {
 	visibility: hidden;
 }
 
-.overlay.active {
+#overlay.active {
 	visibility: visible;
 }
 
